ページ上にテンプレートコピーの ためのボタンを配置

--- a/pages/popup.html
+++ b/pages/popup.html
@@ -5,6 +5,10 @@
     <link rel="stylesheet" href="../styles/popup.css">
   </head>
   <body>
+    <input type="submit" value="ブラウザテンプレ" id="browserCopyButton">
+    <br>
+    <input type="submit" value="テストテンプレ" id="caseCopyButton">
+    <br>
     <span>1以上の値を入力して表生成</span>
     <form>
       <label for="headNum">ヘッダ数：</label>
